replace dummy text with lorem ipsum

--- a/app/src/main/assets/help/index.html
+++ b/app/src/main/assets/help/index.html
@@ -9,48 +9,23 @@
         </br>
         <a href="hp1.html">Help page 1.</a>
         </br>
-        </br>
-        Dummy help page.
-        </br>
-        </br>
-        Dummy help page.
-        </br>
-        </br>
-        Dummy help page.
-        </br>
-        </br>
-        Dummy help page.
-        </br>
-        </br>
-        Dummy help page.
-        </br>
-        </br>
-        Dummy help page.
-        </br>
-        </br>
-        Dummy help page.
-        </br>
-        </br>
-        Dummy help page.
-        </br>
-        </br>
-        Dummy help page.
-        </br>
-        </br>
-        Dummy help page.
-        </br>
-        </br>
-        Dummy help page.
-        </br>
-        </br>
-        Dummy help page.
-        </br>
-        </br>
-        Dummy help page.
-        </br>
-        </br>
-        Dummy help page.
-        </br>
-        </br>
+        <h2>
+            Lorem ipsum
+        </h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed laoreet egestas lacus, at tincidunt mi scelerisque a. Phasellus consectetur, lectus in pellentesque maximus, nibh lorem rutrum nisl, sit amet ultrices ante dui vitae nisi. Maecenas eu ante eget est volutpat dapibus. Nulla elit tortor, consequat sit amet volutpat ac, tempus at ipsum. Maecenas ac efficitur ante. Maecenas efficitur turpis sed ultricies lacinia. Donec scelerisque ut ex vel facilisis. Duis ultricies quis quam ac lacinia. Cras est est, mattis non turpis vitae, accumsan fermentum lorem. Pellentesque mattis leo est, tincidunt tincidunt mi congue ut. Nullam mollis euismod nibh, quis ornare urna luctus in.
+        </p>
+        <p>
+            Aenean laoreet, mi ac sollicitudin fermentum, elit urna auctor augue, ut tempus odio magna non ligula. Fusce a sapien ac turpis volutpat varius vitae id augue. Cras ultricies malesuada enim nec egestas. Praesent in ligula ac leo egestas fringilla in at justo. Aenean dictum, enim eget mollis rutrum, mi ante semper urna, quis consectetur ex libero a sapien. Suspendisse eu elementum urna. In hac habitasse platea dictumst. Ut pulvinar mi sit amet urna ultricies rhoncus sed at ante. Sed venenatis lorem justo, eget ultricies leo lobortis id. Phasellus quis aliquam magna. Nam hendrerit placerat leo eget hendrerit.
+        </p>
+        <p>
+            Fusce aliquam sem id dignissim fermentum. Vestibulum nibh elit, efficitur porta interdum sed, viverra at libero. Vestibulum tincidunt aliquet convallis. Aenean convallis finibus ligula vitae cursus. Integer elementum ante turpis, vel sollicitudin ligula faucibus non. Nulla eu porta mauris. Pellentesque vel placerat lectus, ac cursus sem. Sed convallis sit amet tellus tincidunt tristique.
+        </p>
+        <p>
+            Nunc sit amet nisi nisi. Fusce faucibus commodo ipsum elementum placerat. Maecenas id mauris quis ante aliquam dictum. Etiam vitae consequat est. Maecenas ac aliquet lectus. Suspendisse dapibus non eros vel euismod. Fusce a dictum elit.
+        </p>
+        <p>
+            Donec viverra tortor quis ante pharetra accumsan. Nam blandit gravida nulla, sit amet efficitur metus scelerisque in. Praesent viverra, ipsum at fermentum ullamcorper, velit nibh tincidunt quam, vehicula commodo ante lacus non quam. Nulla condimentum, enim nec fermentum rutrum, ex elit efficitur augue, non sollicitudin est erat vitae justo. Etiam egestas massa sed auctor semper. Aenean id vehicula felis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras urna elit, dapibus nec nisi vel, ultrices dignissim ipsum. Quisque varius turpis dui, et dignissim magna iaculis hendrerit. Integer ex dolor, egestas ut accumsan a, molestie ut lorem. Nullam placerat blandit tempus. Aenean quis urna vel leo convallis gravida a ac arcu. Donec et nulla bibendum, tincidunt orci eu, pretium nisl.
+        </p>
     </body>
 </html>
